--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Your Dietician</title>
-  <link rel="stylesheet" href="styles.css">
-  <link rel="stylesheet" href="diet.css"> <!-- Add this line for diet.css -->
+  
+  <link rel="stylesheet" href="diet.css"> 
 </head>
 
 <body>
